--- a/.github/workflows/mdl_linter.yml
+++ b/.github/workflows/mdl_linter.yml
@@ -10,20 +10,19 @@ on:
     paths:
       - "**/*.md"
 
-  workflow_dispatch:
-
 jobs:
   lint:
     name: mdl runner
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js
-      uses: actions/setup-node@v1
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Install PNPM
+      uses: pnpm/action-setup@v2
       with:
-        node-version: 12.x
+        version: latest
+    - name: Install dependencies
+      run: pnpm install --lockfile=false
     - name: Run Markdownlint
-      run: |
-        npm i -g markdownlint-cli
-        markdownlint . -c md_config.json
+      run: pnpm md:lint
